fix inwariantów, praca nad ProjectWriter i Reader 0.1